--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -13,9 +13,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/white">
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
         
         <TextView
             android:text="UW Course Goose"
@@ -31,9 +32,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="3dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:background="@color/white">
             
             <Button
                 android:layout_width="wrap_content"
@@ -46,8 +48,10 @@
                 android:text="Applied Health Sciences"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"/>            
-            
+                android:gravity="center_vertical"
+                android:textColor="@color/AHS"
+                android:textSize="17sp"
+                android:textStyle="bold"/>         
             
         </LinearLayout>
         
@@ -55,9 +59,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="3dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:background="@color/white">
             
             <Button
                 android:layout_width="wrap_content"
@@ -70,7 +75,10 @@
                 android:text="Arts"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"/>            
+                android:gravity="center_vertical"
+                android:textColor="@color/Arts"
+                android:textSize="17sp"
+                android:textStyle="bold"/>            
             
             
         </LinearLayout>
@@ -79,9 +87,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="3dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:background="@color/white">
             
             <Button
                 android:layout_width="wrap_content"
@@ -94,7 +103,10 @@
                 android:text="Engineering"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"/>            
+                android:gravity="center_vertical"
+                android:textColor="@color/Engineering"
+                android:textSize="17sp"
+                android:textStyle="bold"/>            
             
             
         </LinearLayout>
@@ -103,9 +115,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="3dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:background="@color/white">
             
             <Button
                 android:layout_width="wrap_content"
@@ -118,7 +131,10 @@
                 android:text="Environment"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"/>            
+                android:gravity="center_vertical"
+                android:textColor="@color/Environment"
+                android:textSize="17sp"
+                android:textStyle="bold"/>            
             
             
         </LinearLayout>
@@ -127,9 +143,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="3dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:background="@color/white">
             
             <Button
                 android:layout_width="wrap_content"
@@ -142,7 +159,10 @@
                 android:text="Mathematics"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"/>            
+                android:gravity="center_vertical"
+                android:textColor="@color/Mathematics"
+                android:textSize="17sp"
+                android:textStyle="bold"/>            
             
             
         </LinearLayout>
@@ -151,9 +171,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="3dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:background="@color/white">
             
             <Button
                 android:layout_width="wrap_content"
@@ -166,7 +187,10 @@
                 android:text="Science"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"/>            
+                android:gravity="center_vertical"
+                android:textColor="@color/Science"
+                android:textSize="17sp"
+                android:textStyle="bold"/>            
             
             
         </LinearLayout>
