--- a/UWCourseGoose/res/layout/activity_course.xml
+++ b/UWCourseGoose/res/layout/activity_course.xml
@@ -9,43 +9,52 @@
     tools:context=".CourseActivity" >
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tvCourseTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/courseTitle" />
-
-        <TextView
-            android:id="@+id/tvCourseDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/courseDescription" />
-
-        <EditText
-            android:id="@+id/txtUserComment"
+        android:layout_height="wrap_content">
+        
+        <TextView 
+            android:id="@+id/course_code_TextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textMultiLine" >
-
-            <requestFocus />
-        </EditText>
-
-        <Button
-            android:id="@+id/btnAddReview"
+            android:layout_height="wrap_content"/>
+        
+        <TextView 
+            android:id="@+id/course_description_TextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add Review" />
-
-        <RatingBar
-            android:id="@+id/rateUser"
+            android:layout_height="wrap_content"/>
+        
+        <LinearLayout 
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+        	
+            <TextView 
+                android:text="Reviews"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textSize="30sp"
+                android:layout_marginRight="100dp"/>
+            
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical">
+                
+                
+                
+                <Button 
+                    android:text="+"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"/>
+                
+            </LinearLayout>
+            
+        </LinearLayout>
+        
     </LinearLayout>
-
+    
 </ScrollView>
