--- a/UWCourseGoose/res/layout/activity_course.xml
+++ b/UWCourseGoose/res/layout/activity_course.xml
@@ -40,16 +40,14 @@
                 android:orientation="vertical"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:gravity="center_vertical">
-                
-                
-                
-                <Button 
-                    android:text="+"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical">
+
+                <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_gravity="center_vertical"
-                    android:gravity="center_vertical"/>
+                    android:layout_height="31dp"
+                    android:gravity="center_vertical"
+                    android:text="+" />
                 
             </LinearLayout>
             
