--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -19,12 +19,14 @@
         android:layout_marginBottom="10dp">
         
         <TextView
+            android:id="@+id/app_header"
             android:text="UW Course Goose"
             android:fontFamily="sans_serif"
             android:textSize="30sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+            android:textColor="@color/white">
             
         </TextView>
         
