--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp">
         
         <TextView
             android:id="@+id/app_header"
@@ -31,6 +31,7 @@
         </TextView>
         
         <RelativeLayout
+            android:id="@+id/ahs_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -56,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
-            android:background="@drawable/environment"
+            android:background="@drawable/arts"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical">
                 
@@ -97,6 +98,26 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
+            android:background="@drawable/environment"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical">
+                
+                <ImageView
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
+                android:text="drop"
+                android:background="@drawable/triangle_right">                
+            	</ImageView>
+         
+            
+     	</RelativeLayout>
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginTop="2dp"
             android:background="@drawable/math"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical">
@@ -118,26 +139,6 @@
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
             android:background="@drawable/science"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical">
-                
-                <ImageView
-                android:layout_width="33dp"
-                android:layout_height="33dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="10dp"
-                android:text="drop"
-                android:background="@drawable/triangle_right">                
-            	</ImageView>
-         
-            
-     	</RelativeLayout>
-        
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/ahs"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical">
                 
