--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         </TextView>
         
         <RelativeLayout
+            android:clickable="true"
             android:id="@+id/ahs_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
