--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -31,7 +31,6 @@
         </TextView>
         
         <RelativeLayout
-            android:clickable="true"
             android:id="@+id/ahs_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
@@ -41,6 +40,7 @@
             android:gravity="center_vertical">
                 
                 <ImageView
+                    android:id="@+id/ahs_arrow"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:layout_marginRight="20dp"
@@ -55,6 +55,7 @@
                    
         
         <RelativeLayout
+            android:id="@id/arts_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -63,6 +64,7 @@
             android:gravity="center_vertical">
                 
                 <ImageView
+                    android:id="@+id/arts_arrow"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:layout_marginRight="20dp"
@@ -76,6 +78,7 @@
      	
         
         <RelativeLayout
+            android:id="@id/engineering_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -84,6 +87,7 @@
             android:gravity="center_vertical">
                 
                 <ImageView
+                    android:id="@+id/engineering_arrow"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:layout_marginRight="20dp"
@@ -96,6 +100,7 @@
      	</RelativeLayout>
         
         <RelativeLayout
+            android:id="@id/environment_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -104,6 +109,7 @@
             android:gravity="center_vertical">
                 
                 <ImageView
+                    android:id="@+id/environment_arrow"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:layout_marginRight="20dp"
@@ -116,6 +122,7 @@
      	</RelativeLayout>
         
         <RelativeLayout
+            android:id="@id/math_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -124,6 +131,7 @@
             android:gravity="center_vertical">
                 
                 <ImageView
+                    android:id="@+id/math_arrow"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:layout_marginRight="20dp"
@@ -136,6 +144,7 @@
      	</RelativeLayout>
         
         <RelativeLayout
+            android:id="@id/science_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -144,6 +153,7 @@
             android:gravity="center_vertical">
                 
                 <ImageView
+                    android:id="@+id/science_arrow"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:layout_marginRight="20dp"
