--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -122,7 +122,7 @@
      	</RelativeLayout>
         
         <RelativeLayout
-            android:id="@id/math_layout"
+            android:id="@+id/math_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -144,7 +144,7 @@
      	</RelativeLayout>
         
         <RelativeLayout
-            android:id="@id/science_layout"
+            android:id="@+id/science_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
