--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -30,8 +30,8 @@
             
         </TextView>
         
-        <RelativeLayout
-            android:id="@+id/ahs_layout"
+        <Spinner
+            android:id="@+id/ahs_spin"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -39,23 +39,15 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical">
                 
-                <ImageView
-                    android:id="@+id/ahs_arrow"
-                android:layout_width="33dp"
-                android:layout_height="33dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="10dp"
-                android:text="drop"
-                android:background="@drawable/triangle_right">                
-            	</ImageView>
+                
          
             
-     	</RelativeLayout>
+     	</Spinner>
             
                    
         
         <RelativeLayout
-            android:id="@id/arts_layout"
+            android:id="@+id/arts_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -77,8 +69,8 @@
      	</RelativeLayout>
      	
         
-        <RelativeLayout
-            android:id="@id/engineering_layout"
+        <Spinner
+            android:id="@+id/eng_spin"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -86,21 +78,13 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical">
                 
-                <ImageView
-                    android:id="@+id/engineering_arrow"
-                android:layout_width="33dp"
-                android:layout_height="33dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="10dp"
-                android:text="drop"
-                android:background="@drawable/triangle_right">                
-            	</ImageView>
+                
          
             
-     	</RelativeLayout>
+     	</Spinner>
         
         <RelativeLayout
-            android:id="@id/environment_layout"
+            android:id="@+id/environment_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
