--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -30,8 +30,8 @@
             
         </TextView>
         
-        <Spinner
-            android:id="@+id/ahs_spin"
+        <RelativeLayout
+            android:id="@+id/ahs_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -39,10 +39,18 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical">
                 
-                
+                <ImageView
+                    android:id="@+id/ahs_arrow"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
+                android:text="drop"
+                android:background="@drawable/triangle_right">                
+            	</ImageView>
          
             
-     	</Spinner>
+     	</RelativeLayout>
             
                    
         
@@ -69,8 +77,8 @@
      	</RelativeLayout>
      	
         
-        <Spinner
-            android:id="@+id/eng_spin"
+        <RelativeLayout
+            android:id="@+id/engineering_layout"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginTop="2dp"
@@ -78,10 +86,18 @@
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical">
                 
-                
+                <ImageView
+                    android:id="@+id/engineering_arrow"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
+                android:text="drop"
+                android:background="@drawable/triangle_right">                
+            	</ImageView>
          
             
-     	</Spinner>
+     	</RelativeLayout>
         
         <RelativeLayout
             android:id="@+id/environment_layout"
