--- a/UWCourseGoose/res/layout/activity_course.xml
+++ b/UWCourseGoose/res/layout/activity_course.xml
@@ -26,36 +26,44 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:text="@string/courseDescription" />
-        
-        <LinearLayout 
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        	
-            <TextView 
-                android:text="Reviews"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:textSize="30sp"
-                android:layout_marginRight="100dp"/>
-            
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_gravity="center_vertical">
 
-                <Button
-                    android:id="@+id/btnAddReview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="31dp"
-                    android:gravity="center_vertical"
-                    android:text="+" />
-                
-            </LinearLayout>
-            
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:paddingTop="20dp"
+            android:text="Add Your Own Review" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <EditText
+                android:id="@+id/editUserReview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textMultiLine" >
+
+                <requestFocus />
+            </EditText>
+
+            <RatingBar
+                android:id="@+id/ratingUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/btnAddReview"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:text="Submit"
+                android:textAlignment="center"
+                android:textSize="15dp" />
+
         </LinearLayout>
         
     </LinearLayout>
