--- a/UWCourseGoose/res/layout/activity_main.xml
+++ b/UWCourseGoose/res/layout/activity_main.xml
@@ -99,6 +99,15 @@
             
      	</RelativeLayout>
         
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/eng_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
+            
+        </LinearLayout>
+        
         <RelativeLayout
             android:id="@+id/environment_layout"
             android:layout_width="match_parent"
