Fixed array index out of bounds error. Set up basis comment display.

--- a/UWCourseGoose/res/layout/activity_course.xml
+++ b/UWCourseGoose/res/layout/activity_course.xml
@@ -76,6 +76,7 @@
                 android:id="@+id/review1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textStyle="italic"
                 android:paddingTop="10dp" />
 
             <RatingBar
@@ -86,7 +87,8 @@
             <TextView
                 android:id="@+id/review2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" 
+                android:textStyle="italic"/>
 
             <RatingBar
                 android:id="@+id/reviewBar2"
@@ -96,7 +98,8 @@
             <TextView
                 android:id="@+id/review3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textStyle="italic" />
 
             <RatingBar
                 android:id="@+id/reviewBar3"
